--- a/templates/base.html
+++ b/templates/base.html
@@ -108,13 +108,13 @@
                 </a>
                 <div class="collapse ps-3" id="submenuGestaoFinanceira">
                     <a class="nav-link {% if request.endpoint == 'despesas_empresa' %}active{% endif %}" href="{{ url_for('despesas_empresa') }}">
-                        <i class="bi bi-credit-card-2-back"></i> Despesas da Empresa
+                        <i class="bi bi-credit-card-2-back"></i> Informar Despesa da Empresa
                     </a>
                     <a class="nav-link {% if request.endpoint == 'receitas_empresa' %}active{% endif %}" href="{{ url_for('receitas_empresa') }}">
-                        <i class="bi bi-cash-coin"></i> Receitas da Empresa
+                        <i class="bi bi-cash-coin"></i> Informar Receita da Empresa
                     </a>
-                    <a class="nav-link {% if request.endpoint == 'programar_mes' %}active{% endif %}" href="{{ url_for('programar_mes') }}">
-                        <i class="bi bi-calendar-plus"></i> Programar Mês
+                    <a class="nav-link {% if request.endpoint == 'financeiro_mes' %}active{% endif %}" href="{{ url_for('financeiro_mes') }}">
+                        <i class="bi bi-calendar-plus"></i> Financeiro Mês
                     </a>
                 </div>
             </div>
@@ -127,8 +127,8 @@
                     <i class="bi bi-chevron-down small"></i>
                 </a>
                 <div class="collapse ps-3" id="submenuRelatorios">
-                    <a class="nav-link {% if request.endpoint == 'relatorios_lucratividade_periodo' %}active{% endif %}" href="{{ url_for('relatorios_lucratividade_periodo') }}">
-                        <i class="bi bi-graph-up"></i> Lucratividade por Período
+                    <a class="nav-link {% if request.endpoint == 'relatorios_lucratividade_mensal' %}active{% endif %}" href="{{ url_for('relatorios_lucratividade_mensal') }}">
+                        <i class="bi bi-calendar-month"></i> Lucratividade Mensal
                     </a>
                     <a class="nav-link {% if request.endpoint == 'relatorios_faturamento_evento' %}active{% endif %}" href="{{ url_for('relatorios_faturamento_evento') }}">
                         <i class="bi bi-calendar-check"></i> Faturamento por Evento
@@ -138,6 +138,9 @@
                     </a>
                     <a class="nav-link {% if request.endpoint == 'relatorio_despesas_fixas' %}active{% endif %}" href="{{ url_for('relatorio_despesas_fixas') }}">
                         <i class="bi bi-receipt"></i> Despesas Fixas
+                    </a>
+                    <a class="nav-link {% if request.endpoint == 'relatorio_veiculos' %}active{% endif %}" href="{{ url_for('relatorio_veiculos') }}">
+                        <i class="bi bi-car-front"></i> Veículos e Eventos
                     </a>
                 </div>
             </div>
